# Pseudo-Random-List-Generator

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  README.md  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
docs/: conf.py  index.rst
docs/_autosummary/: prlgen.rst  stim_list.stimlist.rst
examples/: example_1.py
proof/: main.tex
src/: prlgen.py  stimlist_py36.py
src/stim_list/: __init__.py  stimlist.py  stimlist_py36.py
tests/: test.py  test_output.py
