[metadata]
name = stim_list
version = 1.0.0
license = GPL 3.0
description = Pseudo Random List Sorting Algorithm
long_description = file: README.rst
author = Daniel Diaz
author_email = daniel.diaz@ucl.ac.uk
classifiers=

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =

[options.packages.find]
where=src
